# falken_drinks

./: .env.sample  .flaskenv  .gcloudignore  .gitignore  LICENSE  README.md  app.yaml  check_app.sh  main.py  migrate_add_counts_as_water.py  migrate_expand_user_password_length.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_app.sh  run_check.sh  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tech_improvement.md
.github/agents/: code-reviewer.md  debugger.md  feature-developer.md  test-writer.md
.github/copilot/: config.md  snippets.md
.github/instructions/: coding-standards.md  security.md  testing.md
.github/prompts/: code-review.prompt.md  flask-template.prompt.md  javascript-test.prompt.md  python-test.prompt.md  python.prompt.md  sqlalchemy-model.prompt.md
.github/workflows/: ci.yml  deploy.yml
coverage/js/: clover.xml  coverage-final.json  lcov.info
coverage/js/lcov-report/: drink_selector.js.html  falken.js.html  index.html
falken_drinks/: app.py  auth.py  cache.py  config.py  controllers.py  logger.py  main.py  models.py  routes.py  swagger.py  urls.py
falken_drinks/static/css/: main.css
falken_drinks/static/js/: drink_selector.js
falken_drinks/templates/: analytics.html  drinks_management.html  signup.html
scripts/: check_app.sh  run_app.sh
static/css/: main.css
static/js/: drink_selector.js  falken.js
templates/: analytics.html  base.html  daily_habits.html  daily_habits_calendar.html  daily_summary.html  drinks_management.html  home.html  login.html  signup.html
tests/: basetest.py  test_analytics.py  test_analytics.py.bak  test_app.py  test_auth.py  test_cache.py  test_config.py  test_controllers.py  test_controllers.py.bak  test_controllers.py.bak2  test_controllers.py.bak3  test_logger.py  test_main.py  test_models.py  test_routes.py  test_swagger.py  test_urls.py
tests/js/: drink_selector.test.js  drinks_management.test.js  falken.test.js
