[project]
name = "falken-drinks"
version = "0.1.0"
description = "Falken apps to manage daily drinks"
authors = ["Falken"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-swagger-ui>=4.11.1",
    "flask-validator>=1.4.1",
    "gunicorn>=23.0.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "mock>=5.2.0",
    "pytest>=8.3.5",
]
lint = [
    "autopep8>=2.3.2",
    "flake8>=7.1.2",
]
