[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "falken-drinks"
version = "0.1.0"
title = "Falken Drinks"
description = "Falken apps to manage daily drinks"
authors = [{ name = "Falken" }]
license = { text = "MIT" }
url_github = "https://github.com/falken20/"
url_twitter = "https://twitter.com/richionline"
url_linkedin = "https://www.linkedin.com/in/richionline/"
copyright = "© 2024 by Richi Rod AKA @richionline / falken20"
features = ["flask", "gunicorn", "pydantic", "rich", "toml"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-swagger-ui>=4.11.1",
    "flask-validator>=1.4.1",
    "gunicorn>=23.0.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "toml>=0.10.2",
    "psycopg2-binary", # PostgreSQL adapter
]

[project.urls]
Homepage = "https://github.com/falken20/"
Twitter = "https://twitter.com/richionline"
LinkedIn = "https://www.linkedin.com/in/richionline/"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
    "coverage>=7.6.12",
    "mock>=5.2.0",
    "pytest>=8.3.5",
]
lint = [
    "autopep8>=2.3.2",
    "flake8>=7.1.2",
]


